--- a/pocketpassword/src/main/resources/fxml/AuthDetailsView.fxml
+++ b/pocketpassword/src/main/resources/fxml/AuthDetailsView.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
@@ -14,12 +15,22 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane id="AnchorPane" prefHeight="405.0" prefWidth="375.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1"
-  fx:controller="com.ibh.pocketpassword.gui.AuthDetailsViewControllerImpl">
+<AnchorPane id="AnchorPane" prefHeight="405.0" prefWidth="375.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.ibh.pocketpassword.gui.AuthDetailsViewControllerImpl">
    <children>
       <VBox prefHeight="200.0" prefWidth="100.0" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="5.0">
          <children>
             <Label styleClass="viewTitle" text="Label" />
+            <HBox prefHeight="100.0" prefWidth="200.0">
+               <children>
+                  <Hyperlink fx:id="hlTitle" onAction="#handleTitleLink" />
+                  <Label text=" - ">
+                     <HBox.margin>
+                        <Insets left="5.0" right="5.0" />
+                     </HBox.margin>
+                  </Label>
+                  <Label fx:id="lblCategName" />
+               </children>
+            </HBox>
             <GridPane hgap="10.0" vgap="10.0" VBox.vgrow="SOMETIMES">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="150.0" prefWidth="150.0" />
@@ -58,11 +69,11 @@
                         <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
                      </GridPane.margin>
                   </TextField>
-                  <TextField fx:id="txtValidFrom" editable="false" GridPane.columnIndex="1" GridPane.rowIndex="3">
+                  <DatePicker fx:id="dpValidFrom" editable="false" GridPane.columnIndex="1" GridPane.rowIndex="3">
                      <GridPane.margin>
                         <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
                      </GridPane.margin>
-                  </TextField>
+                  </DatePicker>
                </children>
                <VBox.margin>
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
