auth details view

--- a/pocketpassword/src/main/resources/style/Application.css
+++ b/pocketpassword/src/main/resources/style/Application.css
@@ -1,33 +1,25 @@
-/*
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
-*/
-/* 
-    Created on : Dec 20, 2016, 2:54:13 PM
-    Author     : ihorvath
-*/
 .view {
   -fx-background-color: #99ff99;
 }
-.categoryLabel {
+.LabelCategory {
   -fx-font-size: 20;
   -fx-font-style: italic;
   -fx-font-weight: bold;
   -fx-text-fill: blue;
 }
-.titleLabel {
+.hyperlinkTitle {
   -fx-font-size: 30; 
   -fx-font-weight: bold; 
   -fx-text-fill: brown;
-}
-.webAddressLabel {
-  -fx-font-size: 20;
 }
 .howOldLabel {
   -fx-font-size: 25; 
   -fx-font-weight: bold; 
   -fx-text-fill: brown;
+}
+.labelStatic {
+  -fx-font-size: 14;
+  -fx-font-style: italic;
 }
 .viewTitle {
   -fx-text-fill: #1820b2;
