--- a/pocketpassword/src/main/resources/fxml/AuthDetailsView.fxml
+++ b/pocketpassword/src/main/resources/fxml/AuthDetailsView.fxml
@@ -2,10 +2,8 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -14,71 +12,54 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="405.0" prefWidth="375.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.ibh.pocketpassword.gui.AuthDetailsViewControllerImpl">
+<AnchorPane prefHeight="405.0" prefWidth="375.0" styleClass="view" stylesheets="@../style/Application.css" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.ibh.pocketpassword.gui.AuthDetailsViewControllerImpl">
    <children>
-      <VBox prefHeight="200.0" prefWidth="100.0" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="5.0">
+      <VBox minWidth="-Infinity" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
          <children>
-            <Label styleClass="viewTitle" text="Label" />
-            <HBox prefHeight="100.0" prefWidth="200.0">
+            <HBox alignment="CENTER_LEFT">
                <children>
-                  <Hyperlink fx:id="hlTitle" onAction="#handleTitleLink" />
+                  <Hyperlink fx:id="hlTitle" minWidth="-Infinity" onAction="#handleTitleLink" styleClass="hyperlinkTitle" text="web address link" />
                   <Label text=" - ">
                      <HBox.margin>
-                        <Insets left="5.0" right="5.0" />
+                        <Insets left="10.0" right="10.0" />
                      </HBox.margin>
                   </Label>
-                  <Label fx:id="lblCategName" />
-               </children>
-            </HBox>
-            <GridPane hgap="10.0" vgap="10.0" VBox.vgrow="SOMETIMES">
-              <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="150.0" prefWidth="150.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="200.0" prefWidth="200.0" />
-              </columnConstraints>
-              <rowConstraints>
-                <RowConstraints minHeight="25.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="25.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="25.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="25.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="25.0" prefHeight="30.0" vgrow="SOMETIMES" />
-              </rowConstraints>
-               <children>
-                  <Label text="Title" />
-                  <Label text="Category" GridPane.rowIndex="1" />
-                  <Label text="Web Address" GridPane.rowIndex="2" />
-                  <Label text="Description" GridPane.rowIndex="4" />
-                  <TextArea fx:id="txaDescription" editable="false" prefHeight="200.0" prefWidth="200.0" wrapText="true" GridPane.columnIndex="1" GridPane.rowIndex="4">
-                     <GridPane.margin>
-                        <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
-                     </GridPane.margin>
-                  </TextArea>
-                  <Hyperlink fx:id="txtWebAddress" onAction="#handleWebAddressLink" text="Hyperlink" GridPane.columnIndex="1" GridPane.rowIndex="2">
-                     <GridPane.margin>
-                        <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
-                     </GridPane.margin>
-                  </Hyperlink>
-                  <TextField fx:id="txtTitle" editable="false" GridPane.columnIndex="1">
-                     <GridPane.margin>
-                        <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
-                     </GridPane.margin>
-                  </TextField>
-                  <Label text="Valid From" GridPane.rowIndex="3" />
-                  <TextField fx:id="txtCategory" editable="false" GridPane.columnIndex="1" GridPane.rowIndex="1">
-                     <GridPane.margin>
-                        <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
-                     </GridPane.margin>
-                  </TextField>
-                  <DatePicker fx:id="dpValidFrom" editable="false" GridPane.columnIndex="1" GridPane.rowIndex="3">
-                     <GridPane.margin>
-                        <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
-                     </GridPane.margin>
-                  </DatePicker>
+                  <Label fx:id="lblCategName" alignment="TOP_LEFT" minWidth="-Infinity" styleClass="LabelCategory" text="category" />
                </children>
                <VBox.margin>
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </VBox.margin>
-            </GridPane>
+            </HBox>
+            <HBox alignment="CENTER_LEFT">
+               <children>
+                  <Label fx:id="lblDaysOld" minWidth="-Infinity" styleClass="howOldLabel" text="15" />
+                  <Label alignment="BASELINE_CENTER" styleClass="labelStatic" text="days old.">
+                     <HBox.margin>
+                        <Insets left="10.0" right="10.0" />
+                     </HBox.margin>
+                     <font>
+                        <Font name="System Italic" size="14.0" />
+                     </font>
+                  </Label>
+                  <Label alignment="BASELINE_CENTER" styleClass="labelStatic" text="Created on">
+                     <HBox.margin>
+                        <Insets left="10.0" right="10.0" />
+                     </HBox.margin>
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="lblCreatedOn" minWidth="-Infinity" styleClass="howOldLabel" text="2019-02-01" />
+               </children>
+               <VBox.margin>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </VBox.margin>
+               <padding>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </padding>
+            </HBox>
             <HBox alignment="CENTER_RIGHT" spacing="5.0">
                <children>
                   <Button fx:id="cmdEdit" defaultButton="false" mnemonicParsing="false" onAction="#handleEdit" text="Edit" />
