--- a/pocketpassword/src/main/resources/fxml/AuthDetailsView.fxml
+++ b/pocketpassword/src/main/resources/fxml/AuthDetailsView.fxml
@@ -4,8 +4,11 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.TitledPane?>
+<?import javafx.scene.control.ToggleButton?>
+<?import javafx.scene.control.Tooltip?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -79,30 +82,44 @@
                     <rowConstraints>
                       <RowConstraints />
                       <RowConstraints />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" />
                     </rowConstraints>
                      <children>
                         <HBox GridPane.columnIndex="1">
                            <children>
-                              <TextField fx:id="txtShowUserName" editable="false" />
+                              <PasswordField fx:id="txtMaskedUserName" editable="false" />
+                              <TextField fx:id="txtShowUserName" editable="false" managed="false" visible="false" />
                               <Button mnemonicParsing="false" onAction="#handleCopyUserName" text="...">
                                  <HBox.margin>
                                     <Insets left="3.0" />
                                  </HBox.margin>
+                                 <tooltip>
+                                    <Tooltip text="Copy User Name" />
+                                 </tooltip>
                               </Button>
                            </children>
                         </HBox>
                         <HBox GridPane.columnIndex="1" GridPane.rowIndex="1">
                            <children>
-                              <TextField fx:id="txtShowPassword" editable="false" />
+                              <PasswordField fx:id="txtMaskedPassword" editable="false" />
+                              <TextField fx:id="txtShowPassword" editable="false" managed="false" visible="false" />
                               <Button mnemonicParsing="false" onAction="#handleCopyPassword" text="...">
                                  <HBox.margin>
                                     <Insets left="3.0" />
                                  </HBox.margin>
+                                 <tooltip>
+                                    <Tooltip text="Copy Password" />
+                                 </tooltip>
                               </Button>
                            </children>
                         </HBox>
                         <Label text="User Name" />
                         <Label text="Password" GridPane.rowIndex="1" />
+                        <ToggleButton fx:id="tbtnShowHide" mnemonicParsing="false" onAction="#handleShowHide" text="Show UserName/Password" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="2">
+                           <GridPane.margin>
+                              <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                           </GridPane.margin>
+                        </ToggleButton>
                      </children>
                      <padding>
                         <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
