--- a/pocketpassword/src/main/resources/fxml/AuthListView.fxml
+++ b/pocketpassword/src/main/resources/fxml/AuthListView.fxml
@@ -2,25 +2,19 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ButtonBar?>
-<?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.TitledPane?>
-<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1"
-  fx:controller="com.ibh.pocketpassword.gui.AuthListViewControllerImpl">
+<VBox xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.ibh.pocketpassword.gui.AuthListViewControllerImpl">
 	<children>
-		<Label styleClass="viewTitle" text="%titleAuth"
-			textFill="#1820b2">
+		<Label styleClass="viewTitle" text="%titleAuth" textFill="#1820b2">
 			<font>
 				<Font name="System Bold" size="14.0" />
 			</font>
@@ -37,8 +31,7 @@
 										<TextField fx:id="titleFilter" promptText="Filter for Title" />
 										<HBox alignment="CENTER" spacing="5.0">
 											<children>
-												<Button mnemonicParsing="false" onAction="#handleClearFilter"
-													text="Clear Filter" />
+												<Button mnemonicParsing="false" onAction="#handleClearFilter" text="Clear Filter" />
 											</children>
 										</HBox>
 									</children>
@@ -50,8 +43,7 @@
 						</TitledPane>
 						<HBox alignment="CENTER">
 							<children>
-								<Button alignment="CENTER" mnemonicParsing="false"
-									onAction="#handleNew" text="New Authentication" />
+								<Button alignment="CENTER" mnemonicParsing="false" onAction="#handleNew" text="New Authentication" />
 							</children>
 							<VBox.margin>
 								<Insets left="5.0" right="5.0" />
@@ -59,12 +51,10 @@
 						</HBox>
 						<TableView fx:id="authTable">
 							<columns>
-								<TableColumn fx:id="categoryColumn" prefWidth="120.0"
-									text="Category" />
-								<TableColumn fx:id="titleColumn" prefWidth="120.0"
-									text="Title" />
-								<TableColumn fx:id="howOldColumn" prefWidth="120.0"
-									text="How Old?" />
+								<TableColumn fx:id="categoryColumn" prefWidth="120.0" text="Category" />
+								<TableColumn fx:id="titleColumn" prefWidth="120.0" text="Title" />
+								<TableColumn fx:id="howOldColumn" prefWidth="120.0" text="How Old?" />
+                        <TableColumn fx:id="actionColumn" editable="false" prefWidth="75.0" sortable="false" text="Actions" />
 							</columns>
 							<columnResizePolicy>
 								<TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -76,9 +66,6 @@
 					</children>
 				</VBox>
 				<VBox fx:id="crudContainer">
-				  <children>
-             <fx:include source="AuthDetailsView.fxml" />
-          </children>
 				</VBox>
 			</items>
 		</SplitPane>
