--- a/pocketpassword/src/main/resources/fxml/Main.fxml
+++ b/pocketpassword/src/main/resources/fxml/Main.fxml
@@ -1,17 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.MenuButton?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.ToolBar?>
 <?import javafx.scene.layout.BorderPane?>
 
-<BorderPane fx:id="borderPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1"
-	fx:controller="com.ibh.pocketpassword.gui.MainViewControllerImpl">
+<BorderPane fx:id="borderPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.ibh.pocketpassword.gui.MainViewControllerImpl">
    <top>
       <ToolBar fx:id="toolbar" prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
         <items>
           <Button mnemonicParsing="false" onAction="#handleTlbExit" text="%btnExit" />
             <Button mnemonicParsing="false" onAction="#handleTlbAuth" text="%btnAuths" />
             <Button mnemonicParsing="false" onAction="#handleTlbCateg" text="%btnCategories" />
+            <MenuButton mnemonicParsing="false" text="%mnuSettings">
+              <items>
+                <MenuItem mnemonicParsing="false" onAction="#handlemnuChangePwd" text="%mnuChangePwd" />
+              </items>
+            </MenuButton>
             <Button mnemonicParsing="false" onAction="#handleTlbAbout" text="%btnAbout" />
         </items>
       </ToolBar>
