--- a/pocketpassword/src/main/resources/fxml/LoginView.fxml
+++ b/pocketpassword/src/main/resources/fxml/LoginView.fxml
@@ -3,10 +3,13 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.MenuButton?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
@@ -23,6 +26,7 @@
       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
   </rowConstraints>
@@ -44,19 +48,35 @@
             <Insets right="20.0" />
          </GridPane.margin>
       </ImageView>
-      <Label fx:id="lblErrorText" textFill="RED" GridPane.columnSpan="2" GridPane.rowIndex="4">
+      <Label fx:id="lblErrorText" textFill="RED" GridPane.columnSpan="2" GridPane.rowIndex="5">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
       </Label>
-      <HBox alignment="CENTER_RIGHT" prefHeight="100.0" prefWidth="200.0" spacing="5.0" GridPane.columnSpan="2" GridPane.rowIndex="5">
-         <children>
-            <Button defaultButton="true" mnemonicParsing="false" onAction="#handleLogin" text="Login" />
-            <Button mnemonicParsing="false" onAction="#handleCreateDB" text="Create DB" />
-         </children>
+      <AnchorPane GridPane.columnSpan="2" GridPane.rowIndex="6">
          <GridPane.margin>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </GridPane.margin>
-      </HBox>
+         <children>
+            <HBox alignment="CENTER_RIGHT" spacing="5.0" AnchorPane.rightAnchor="10.0">
+               <children>
+                  <Button fx:id="btnLogin" defaultButton="true" mnemonicParsing="false" onAction="#handleLogin" text="Login" />
+                  <Button fx:id="btnCreateDB" mnemonicParsing="false" onAction="#handleCreateDB" text="Create DB" />
+                  <Button mnemonicParsing="false" onAction="#handleCancel" text="Cancel" />
+               </children>
+            </HBox>
+            <HBox AnchorPane.leftAnchor="10.0">
+            <children>
+            <MenuButton mnemonicParsing="false" text="%mnuSettings">
+              <items>
+                <MenuItem mnemonicParsing="false" onAction="#handlemnuChangePwd" text="%mnuChangePwd" />
+              </items>
+            </MenuButton>
+            </children>
+            </HBox>
+         </children>
+      </AnchorPane>
+      <Label fx:id="lblPasswordNew" text="New Password" GridPane.rowIndex="4" />
+      <PasswordField fx:id="txtPasswordNew" promptText="New Password" GridPane.columnIndex="1" GridPane.rowIndex="4" />
    </children>
 </GridPane>
