--- a/pocketpassword/src/main/resources/fxml/LoginView.fxml
+++ b/pocketpassword/src/main/resources/fxml/LoginView.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.MenuButton?>
 <?import javafx.scene.control.MenuItem?>
@@ -38,7 +39,18 @@
       <Label text="Database" GridPane.rowIndex="2" />
       <Label text="User Name" GridPane.rowIndex="3" />
       <Label text="Password" GridPane.rowIndex="4" />
-      <TextField fx:id="txtDatabaseName" promptText="Database Name" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+      <HBox GridPane.columnIndex="1" GridPane.rowIndex="2">
+         <children>
+            <TextField fx:id="txtDatabaseName" promptText="Database Name">
+               <HBox.margin>
+                  <Insets right="10.0" />
+               </HBox.margin></TextField>
+            <CheckBox fx:id="chkDbRemember" mnemonicParsing="false" text="Remember">
+               <HBox.margin>
+                  <Insets top="3.0" />
+               </HBox.margin></CheckBox>
+         </children>
+      </HBox>
       <TextField fx:id="txtUserName" promptText="User Name" GridPane.columnIndex="1" GridPane.rowIndex="3" />
       <PasswordField fx:id="txtPassword" promptText="Password" GridPane.columnIndex="1" GridPane.rowIndex="4" />
       <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.halignment="RIGHT">
